--- a/vn/index.html
+++ b/vn/index.html
@@ -172,82 +172,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card bg-purple">
-                        <div class="card-body widget p-0">
-                            <div class="widget-data">
-                                <span>
-                                    Resenhas
-                                </span>
-                                <span class="content">
-                                    8
-                                </span>
-                            </div>
-                            <div class="widget-icon">
-                                <span>
-                                    <i class="fa fa-pencil"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card bg-danger">
-                        <div class="card-body widget p-0">
-                            <div class="widget-data">
-                                <span>
-                                    Curiosidades
-                                </span>
-                                <span class="content">
-                                    200
-                                </span>
-                            </div>
-                            <div class="widget-icon">
-                                <span>
-                                    <i class="fa fa-question"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card bg-primary">
-                        <div class="card-body widget p-0">
-                            <div class="widget-data">
-                                <span>
-                                    Tirinhas
-                                </span>
-                                <span class="content">
-                                    10
-                                </span>
-                            </div>
-                            <div class="widget-icon">
-                                <span>
-                                    <i class="fa fa-exclamation"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card bg-warning">
-                        <div class="card-body widget p-0">
-                            <div class="widget-data">
-                                <span>
-                                    Fake News
-                                </span>
-                                <span class="content">
-                                    106
-                                </span>
-                            </div>
-                            <div class="widget-icon">
-                                <span>
-                                    <i class="fa fa-exclamation-triangle"></i>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
+                </div>                
+            </div>
+            <div class="row">
+                <iframe src="./noticias/editorial.html" style= "width:800vw; height:500vw; " id="editorial"></iframe>
             </div>
     </div>
 </body>
