--- a/vn/index.html
+++ b/vn/index.html
@@ -175,7 +175,7 @@
                 </div>                
             </div>
             <div class="row">
-                <iframe src="./noticias/editorial.html" style= "width:800vw; height:500vw; " id="editorial"></iframe>
+                <iframe src="./noticias/editorial.html" style= "width:800vw; height:500vw; " id="editorial" frameBorder="0"></iframe>
             </div>
     </div>
 </body>
