--- a/vn/noticias/editorial.html
+++ b/vn/noticias/editorial.html
@@ -10,28 +10,10 @@
 <body>
     <div class="Bloco3" id="note1">
 		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
+            <h1>Edição de Maio de 2023</h1>
+            <h3> autor: Miguel Ravaiano - 25/05/2023</h3>
             <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="./editorial.html#note3">Vianna Júnior </a>nas olimpiadas</p> 
-            </h2>
-        </div>
-    </div>
-    <div class="Bloco3" id="note2">
-		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
-            <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="https://vianna.edu.br">Vianna Júnior </a>nas olimpiadas</p> 
-            </h2>
-        </div>
-    </div>
-    <div class="Bloco3" id="note3">
-		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
-            <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="https://vianna.edu.br">Vianna Júnior </a>nas olimpiadas</p> 
+               <p>Nessa edição temos novidades nos <a href="./esportes.html">esportes</a> com a nova interclasse, além de uma <a href="./entrevistas.html">entrevista</a> com Luís Henrique. Também temos relatos de alunos sobre suas histórias no Vianna na edição <a href="./especial.html">Especial</a> desse mês. </p> 
             </h2>
         </div>
     </div>
