--- a/vn/noticias/entrevistas.html
+++ b/vn/noticias/entrevistas.html
@@ -10,28 +10,28 @@
 <body>
     <div class="Bloco3" id="note1">
 		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
+            <h1>Entrevistas de Maio/23 </h1>
+            <h3> autor: Miguel Ravaiano - 25/05/2023</h3>
             <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="./editorial.html#note3">Vianna Júnior </a>nas olimpiadas</p> 
+               <p>Nesse mês, entrevistamos <a href="./entrevistas.html#note2">Luís Henrique</a>, que nos contou sobre seu papel na guerra da ucrânia, além da entrevista com <a href="./entrevistas.html#note3">Arturo</a>, que deu dicas para passar nesse PISM. </p> 
             </h2>
         </div>
     </div>
     <div class="Bloco3" id="note2">
 		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
+            <h1>Entrevista Com Luís Henrique </h1>
             <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
             <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="https://vianna.edu.br">Vianna Júnior </a>nas olimpiadas</p> 
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
             </h2>
         </div>
     </div>
     <div class="Bloco3" id="note3">
 		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
+            <h1>Entrevista Com Arturo </h1>
             <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
             <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="https://vianna.edu.br">Vianna Júnior </a>nas olimpiadas</p> 
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
             </h2>
         </div>
     </div>
