--- a/vn/index.html
+++ b/vn/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="logo">
             <div class="img">
-                <span class="logo-text">Vianna News</span>
+                <span class="logo-text">VIANNA NEWS</span>
                 <span class="logo-text minbar">VN</span>
             </div>
         </div>
@@ -69,8 +69,8 @@
                     </li>
                     <li>
                         <a href="#">
-                            <i class="fa fa-pencil"></i>
-                            <span class="span">Resenhas</span>
+                            <i class="fa fa-newspaper-o"></i>
+                            <span class="span">Especial</span>
                         </a>
                     </li>                    <li>
                         <a href="#">
