--- a/vn/index.html
+++ b/vn/index.html
@@ -43,48 +43,49 @@
                             <span class="span">Home</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="mnEntrev">
                         <a href="#">
                             <i class="fa fa-microphone"></i>
                             <span class="span">Entrevistas</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="mnEsp">
                         <a href="#">
                             <i class="fa fa-soccer-ball-o"></i>
                             <span class="span">Esportes</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="mnSal">
                         <a href="#">
                             <i class="fa fa-hospital-o"></i>
                             <span class="span">Saúde</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="mnEst">
                         <a href="#">
                             <i class="fa fa-book"></i>
                             <span class="span">Estudos</span>
                         </a>
                     </li>
-                    <li>
+                    <li id="mnSpe">
                         <a href="#">
                             <i class="fa fa-newspaper-o"></i>
                             <span class="span">Especial</span>
                         </a>
-                    </li>                    <li>
+                    </li>                    
+                    <li id="mnCu">
                         <a href="#">
                             <i class="fa fa-question"></i>
                             <span class="span">Curiosidades</span>
                         </a>
                     </li>
-                                        </li>                    <li>
+                    </li>                    <li id="mnTir">
                         <a href="#">
                             <i class="fa fa-exclamation"></i>
-                            <span class="span">Tirinhas</span>
+                            <span class="span">Tirinhas & Poemas</span>
                         </a>
                     </li>
-                                        </li>                    <li>
+                    </li>                    <li id="mnFak">
                         <a href="#">
                             <i class="fa fa-exclamation-triangle"></i>
                             <span class="span">Fake News</span>
@@ -97,7 +98,7 @@
         </aside>
         <div class="page-container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3" id="mnEntrev">
                     <div class="card bg-primary">
                         <div class="card-body widget p-0">
                             <div class="widget-data">
@@ -105,7 +106,6 @@
                                     Entrevistas
                                 </span>
                                 <span class="content">
-                                    10
                                 </span>
                             </div>
                             <div class="widget-icon">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" id="mnEst">
                     <div class="card bg-warning">
                         <div class="card-body widget p-0">
                             <div class="widget-data">
@@ -124,7 +124,6 @@
                                     Estudos
                                 </span>
                                 <span class="content">
-                                    106
                                 </span>
                             </div>
                             <div class="widget-icon">
@@ -135,7 +134,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" id="mnEsp">
                     <div class="card bg-purple">
                         <div class="card-body widget p-0">
                             <div class="widget-data">
@@ -143,7 +142,6 @@
                                     Esportes
                                 </span>
                                 <span class="content">
-                                    8
                                 </span>
                             </div>
                             <div class="widget-icon">
@@ -154,7 +152,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" id="mnSal">
                     <div class="card bg-danger">
                         <div class="card-body widget p-0">
                             <div class="widget-data">
@@ -162,7 +160,6 @@
                                     Saúde
                                 </span>
                                 <span class="content">
-                                    200
                                 </span>
                             </div>
                             <div class="widget-icon">
@@ -175,7 +172,7 @@
                 </div>                
             </div>
             <div class="row">
-                <iframe src="./noticias/editorial.html" style= "width:800vw; height:500vw; " id="editorial" frameBorder="0"></iframe>
+                <iframe src="./noticias/editorial.html" style= "width:800vw; height:500vw; " id="meuIframe" frameBorder="0"></iframe>
             </div>
     </div>
 </body>
