--- a/vn/noticias/editorial.html
+++ b/vn/noticias/editorial.html
@@ -13,7 +13,7 @@
             <h1>Edição de Maio de 2023</h1>
             <h3> autor: Miguel Ravaiano - 25/05/2023</h3>
             <h2> 
-               <p>Nessa edição temos novidades nos <a href="./esportes.html">esportes</a> com a nova interclasse, além de uma <a href="./entrevistas.html">entrevista</a> com Luís Henrique. Também temos relatos de alunos sobre suas histórias no Vianna na edição <a href="./especial.html">Especial</a> desse mês. </p> 
+               <p>Nessa edição temos novidades nos <a href="./esportes.html" style="text-decoration: none; color:#E13147;">esportes</a> com a nova interclasse, além de uma <a href="./entrevistas.html" style="text-decoration: none; color:#E13147;">entrevista</a> com Luís Henrique. Também temos relatos de alunos sobre suas histórias no Vianna na edição <a href="./especial.html" style="text-decoration: none; color:#E13147;">Especial</a> desse mês. </p> 
             </h2>
         </div>
     </div>
