--- a/vn/noticias/entrevistas.html
+++ b/vn/noticias/entrevistas.html
@@ -13,7 +13,7 @@
             <h1>Entrevistas de Maio/23 </h1>
             <h3> autor: Miguel Ravaiano - 25/05/2023</h3>
             <h2> 
-               <p>Nesse mês, entrevistamos <a href="./entrevistas.html#note2">Luís Henrique</a>, que nos contou sobre seu papel na guerra da ucrânia, além da entrevista com <a href="./entrevistas.html#note3">Arturo</a>, que deu dicas para passar nesse PISM. </p> 
+               <p>Nesse mês, entrevistamos <a href="./entrevistas.html#note2" style="text-decoration: none; color:#E13147;">Luís Henrique</a>, que nos contou sobre seu papel na guerra da ucrânia, além da entrevista com <a href="./entrevistas.html#note3" style="text-decoration: none; color:#E13147;">Arturo</a>, que deu dicas para passar nesse PISM. </p> 
             </h2>
         </div>
     </div>
