--- a/vn/noticias/curiosidades.html
+++ b/vn/noticias/curiosidades.html
@@ -10,28 +10,10 @@
 <body>
     <div class="Bloco3" id="note1">
 		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
+            <h1>Curiosidades </h1>
+            <h3> Alunos do 9°B - 17/05/2023</h3>
             <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="./editorial.html#note3">Vianna Júnior </a>nas olimpiadas</p> 
-            </h2>
-        </div>
-    </div>
-    <div class="Bloco3" id="note2">
-		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
-            <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="https://vianna.edu.br">Vianna Júnior </a>nas olimpiadas</p> 
-            </h2>
-        </div>
-    </div>
-    <div class="Bloco3" id="note3">
-		<div class="divProduto">
-            <h1>Seja bem vindo ao nosso site </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
-            <h2> 
-               <p>Nessa edição temos novidades sobre esportes como a participação do <a href="https://vianna.edu.br">Vianna Júnior </a>nas olimpiadas</p> 
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
             </h2>
         </div>
     </div>
