--- a/vn/index.html
+++ b/vn/index.html
@@ -87,8 +87,8 @@
                     </li>
                     </li>                    <li id="mnFak">
                         <a href="#">
-                            <i class="fa fa-exclamation-triangle"></i>
-                            <span class="span">Fake News</span>
+                            <i class="fa fa-language"></i>
+                            <span class="span">Bilíngue</span>
                         </a>
                     </li>
                        </ul>
@@ -116,19 +116,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3" id="mnEst">
+                <div class="col-md-3" id="mnSpe">
                     <div class="card bg-warning">
                         <div class="card-body widget p-0">
                             <div class="widget-data">
                                 <span>
-                                    Estudos
+                                    Especial
                                 </span>
                                 <span class="content">
                                 </span>
                             </div>
                             <div class="widget-icon">
                                 <span>
-                                    <i class="fa fa-book"></i>
+                                    <i class="fa fa-newspaper-o"></i>
                                 </span>
                             </div>
                         </div>
@@ -139,14 +139,15 @@
                         <div class="card-body widget p-0">
                             <div class="widget-data">
                                 <span>
-                                    Esportes
+                                    Tirinhas &
                                 </span>
                                 <span class="content">
+                                    Poemas
                                 </span>
                             </div>
                             <div class="widget-icon">
                                 <span>
-                                    <i class="fa fa-soccer-ball-o"></i>
+                                    <i class="fa fa-exclamation"></i>
                                 </span>
                             </div>
                         </div>
@@ -157,14 +158,14 @@
                         <div class="card-body widget p-0">
                             <div class="widget-data">
                                 <span>
-                                    Saúde
+                                    Bilíngue
                                 </span>
                                 <span class="content">
                                 </span>
                             </div>
                             <div class="widget-icon">
                                 <span>
-                                    <i class="fa fa-hospital-o"></i>
+                                    <i class="fa fa-language"></i>
                                 </span>
                             </div>
                         </div>
