--- a/vn/noticias/editorial.html
+++ b/vn/noticias/editorial.html
@@ -11,9 +11,9 @@
     <div class="Bloco3" id="note1">
 		<div class="divProduto">
             <h1>Edição de Maio de 2023</h1>
-            <h3> autor: Miguel Ravaiano - 25/05/2023</h3>
+            <h3> autor: Miguel Ravaiano - 04/06/2023</h3>
             <h2> 
-               <p>Nessa edição temos novidades nos <a href="./esportes.html" style="text-decoration: none; color:#E13147;">esportes</a> com a nova interclasse, além de uma <a href="./entrevistas.html" style="text-decoration: none; color:#E13147;">entrevista</a> com Luís Henrique. Também temos relatos de alunos sobre suas histórias no Vianna na edição <a href="./especial.html" style="text-decoration: none; color:#E13147;">Especial</a> desse mês. </p> 
+               <p>Nessa edição temos novos <a href="./tirinhas.html" style="text-decoration: none; color:#E13147;">poemas</a> e uma reportagem <a href="./especial.html" style="text-decoration: none; color:#E13147;">especial</a> que falam sobre nossa escola. Também temos uma <a href="./entrevistas.html" style="text-decoration: none; color:#E13147;">Entrevista</a> com Luís Henrique, além do trabalho <a href="./fake-news.html" style="text-decoration: none; color:#E13147;">Bilíngue</a> que nos conta sobre os tipos de Bullying.</p> 
             </h2>
         </div>
     </div>
