--- a/vn/noticias/entrevistas.html
+++ b/vn/noticias/entrevistas.html
@@ -11,27 +11,43 @@
     <div class="Bloco3" id="note1">
 		<div class="divProduto">
             <h1>Entrevistas de Maio/23 </h1>
-            <h3> autor: Miguel Ravaiano - 25/05/2023</h3>
+            <h3> autor: Miguel Ravaiano - 04/06/2023</h3>
             <h2> 
-               <p>Nesse mês, entrevistamos <a href="./entrevistas.html#note2" style="text-decoration: none; color:#E13147;">Luís Henrique</a>, que nos contou sobre seu papel na guerra da ucrânia, além da entrevista com <a href="./entrevistas.html#note3" style="text-decoration: none; color:#E13147;">Arturo</a>, que deu dicas para passar nesse PISM. </p> 
+               <p>Nesse mês, entrevistamos <a href="./entrevistas.html#note2" style="text-decoration: none; color:#E13147;">Luís Henrique</a>, que nos contou porque ainda trabalha no vianna, além da entrevista com <a href="./entrevistas.html#note3" style="text-decoration: none; color:#E13147;">Toledo</a>, que mostrou como se adaptou com os novos padrões da educação física. </p> 
             </h2>
         </div>
     </div>
     <div class="Bloco3" id="note2">
 		<div class="divProduto">
             <h1>Entrevista Com Luís Henrique </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
+            <h3> Laura Leal, Lavínia, Victor Bellose e Arthur do 9ºB</h3>
             <h2> 
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+               <p>Luís Henrique Loures, faz parte do corpo dicente do Vianna há mais de 20 anos, acompanhando boa parte da jornada do colégio. Nesses anos de profissão, conquistou alunos, pais e outros professores, se tornando o querido professor de história.</p> 
+               <i style="color: black;">Alunos: O que o Vianna significa pra você? <i>
+                <p>Luís: “Vianna para mim é minha segunda casa, meu local de trabalho de mais de 20 anos, e excelência em educação!”</p>
+                <i style="color: black;">Alunos: Por qual razão escolheu o Instituto Vianna Júnior por tanto anos? <i>
+                <p>Luís: “Pela oportunidade, valorização do trabalho, pelo corpo docente, pelo corpo dicente, e a estrutura oferecida aos funcionários.”</p>
+               <i style="color: black;">Alunos: Por que estudar história? <i>
+                <p>Luís: “A história é um trem que transporta o conhecimento do mundo e transforma a sociedade e as pessoas de forma individual e coletivo.”</p>
+                <i style="color: black;">Alunos: Há algo que você, professor, deseja realizar na escola ainda esse ano? <i>
+                <p>Luís: “Levar aos alunos ao maior conhecimento possível dos conteúdos apresentados a partir de então.”</p>
             </h2>
         </div>
     </div>
     <div class="Bloco3" id="note3">
 		<div class="divProduto">
-            <h1>Entrevista Com Arturo </h1>
-            <h3> autor: Miguel Ravaiano - 17/05/2023</h3>
+            <h1>Entrevista Com Paulo Toledo </h1>
+            <h3> Maria Clara, Julia Reis e Ana Peracci do 8°B</h3>
             <h2> 
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+                <p>Paulo Henrique Toledo é o professor de educação fìsica do Vianna há 26 anos. Ele relata que foi convidado e adora trabalhar no colégio, da mesma forma que os alunos adoram ele e suas aulas.</p> 
+                <i style="color: black;">Alunas: Como a escola se adaptou as mudanças nos programas de educação física ao longo dos anos e como você contribuiu?<i>
+                 <p>Toledo: “A escola vem acompanhando ao longo dos anos as varias adaptações que vem sendo atualizadas. Contribui participando de vários cursos de capacitação, alem de uma melhoria na minha formação me pós graduando em diversos segmentos da educação fisica.”</p>
+                 <i style="color: black;">Alunas: Por que você ainda está no Vianna?<i>
+                 <p>Toledo: “Adoro o Vianna, uma vez que vesti esta camisa, jamais a tirei do meu corpo.”</p>
+                <i style="color: black;">Alunas: Você tem alguma lembrança marcante de um evento esportivo ou atividade física que tenha ocorrido aqui? <i>
+                 <p>Toledo: “São várias mas dentre elas, posso destacar as varias competições nacionais e internacionais da ginástica olímpica, das copas prefeitura Bahamas de futsal e futebol, da conquista do voleibol, os jogos escolares pan-americanos, alem das vitoriosas participações nos jogos intercolegiais de Juiz de Fora.”</p>
+                 <i style="color: black;">Alunas: Você se lembra de algum aluno que se destacou nas aulas de educação física, e que depois se tornou um atleta profissional? <i>
+                 <p>Toledo: “Sim. Hudson, jogador de futebol, com passagens pelo São Paulo, Cruzeiro, Fluminense e outros. Gregory, jogador de futebol com passagens pelo Santos e atualmente jogando nos Estados unidos. Além da equipe de ginástica olímpica que foram treinadas pelo saudoso professor Deber Zambeli”</p>
             </h2>
         </div>
     </div>
