--- a/vn/noticias/fake-news.html
+++ b/vn/noticias/fake-news.html
@@ -10,10 +10,14 @@
 <body>
     <div class="Bloco3" id="note1">
 		<div class="divProduto">
-            <h1>Fake News</h1>
-            <h3> Alunos do 9°B - 17/05/2023</h3>
+            <h1>The Types of Bullying</h1>
+            <h3> 9°B Students - 05/16-17/2023</h3>
             <h2> 
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+               <p>★ Bullying is a very common practice in different situations, all of which cause distress and pain for the person who is being bullied. Bullying includes actions such as making threats,spreading rumors, attacking someone physically or verbally and excluding someone from a group on purpose and they usually want to make the person feel less powerful or helpless.</p> 
+               <p><a style="color:#E13147">★</a>Physical bullying is the use of physical actions to intimidate and gain control over a target. The physical actions are unwanted by the victim and can either cause damage to their body or possessions. It is an aggressive behavior with the intention to intimidate other people. Some actions that the bully makes is: hitting, tripping, kicking, pinching, damage of property and shoving.</p>
+               <p><a style="color:#3B54A1">★</a>Physical bullying is the use of physical actions to intimidate and gain control over a target. The physical actions are unwanted by the victim and can either cause damage to their body or possessions. It is an aggressive behavior with the intention to intimidate other people. Some actions that the bully makes is: hitting, tripping, kicking, pinching, damage of property and shoving.</p>
+               <p><a style="color:#E13147">★</a>Physical bullying is the use of physical actions to intimidate and gain control over a target. The physical actions are unwanted by the victim and can either cause damage to their body or possessions. It is an aggressive behavior with the intention to intimidate other people. Some actions that the bully makes is: hitting, tripping, kicking, pinching, damage of property and shoving.</p>
+               <p><a style="color:#3B54A1">★</a>Physical bullying is the use of physical actions to intimidate and gain control over a target. The physical actions are unwanted by the victim and can either cause damage to their body or possessions. It is an aggressive behavior with the intention to intimidate other people. Some actions that the bully makes is: hitting, tripping, kicking, pinching, damage of property and shoving.</p>
             </h2>
         </div>
     </div>
