--- a/vn/noticias/especial.html
+++ b/vn/noticias/especial.html
@@ -13,7 +13,7 @@
             <h1>História do Vianna e de seus alunos </h1>
             <h3> Miguel Ravaiano - 04/06/2023</h3>
             <h2> 
-               <p>Na edição especial do mês de Maio/23 temos uma reportagem sobre a <a href="./especial.html#note4" style="text-decoration: none; color:#E13147;">História do vianna</a>, além das histórias dos alunos <a href="./especial.html#note3" style="text-decoration: none; color:#E13147;">Sophia Rodrigues</a>, <a href="./especial.html#note2" style="text-decoration: none; color:#E13147;">Diogo de Assis</a> e <a href="./especial.html#note0 style="text-decoration: none; color:#E13147;">Wesley (pai do Henrique - 9°B) </a>no colégio.</p> 
+               <p>Na edição especial do mês de Maio/23 temos uma reportagem sobre a <a href="./especial.html#note4" style="text-decoration: none; color:#E13147;">História do vianna</a>, além das histórias dos alunos <a href="./especial.html#note3" style="text-decoration: none; color:#E13147;">Sophia Rodrigues</a>, <a href="./especial.html#note2" style="text-decoration: none; color:#E13147;">Diogo de Assis</a> e <a href="./especial.html#note0" style="text-decoration: none; color:#E13147;" >Wesley (pai do Henrique - 9°B) </a>no colégio.</p> 
             </h2>
         </div>
     </div>
