--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-   <h1>biel geometredesh </h1>
-   <p><a href="vn/index.html">Clique aqui se estiver procurando o vianna news</a></p>
+   <h1 style="font-size=1000px">biel geometredesh </h1>
 </body>
 </html>
