--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-   <h1 style="font-size=1000px">biel geometredesh </h1>
+   <h1 style="font-size:1000px">biel geometredesh </h1>
 </body>
 </html>
