--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<html>
-<body>
-   <h1 style="font-size:350px">o pc do lado é broxa -> </h1>
-</body>
-</html>
+<!DOCTYPE html><html><body><h1 style="font-size:350px">fala teacher </h1></body></html>
