--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html><body><h1 style="font-size:350px">fala teacher </h1></body></html>
+<!DOCTYPE html>
+<html>
+  <title>migasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigasmigas</title>
+  <body>
+    <h1>eu sou o miguel</h1>
+    <h2>eu sou um estudante</h2>
+    <h3>acessa o google ai</h3>
+    <a href="./pasta/google.html>google</a>
+    <p>esse sou eu <small style="font-size:3px"> (real)</small> </p>
+  </body>
+</html>
