--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
       <li><a href="https://www.youtube.com/watch?v=fBlsZuNkhzk">top 10 torneiras</a></li>
       <li><a href="https://youtube.com/watch?v=VF4Xzh47gss">top 10 robo do bbb</a></li>
     </ol>
+    <video src="./cars_memes_ruggenti2024_03_17_22_39_42543d073c-d5e9-4b23-a94d-b549660a17f6.mp4" height="500px" autoplay muted loop controls></video>
+    <audio src="./low-quality-in-the-end-by-linkin-park.mp3" autoplay controls>yay</audio>
   </body>
 </html>
