--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div class="cabeca">
-        <a href="" class="title">migas</a> <a href="">conhecimentos</a> <a href="">projetos</a> <a href="" class="contato">contato</a>
-    </div>
-    <div class="txt">
-        <h1>Olá Mundo!</h1> eu me chamo miguel e sou <text id="tudo"></text> 
-    </div>
-    <div class="menuimg"><img src="out.gif" width="1000" height="1000"></div>
+    <header>
+        <a href="./index.html" class="title">DS</a> <a href="./prova.html">Provas e trabalhos</a> <a href="./livro.html">Livros e Material</a> <a href="./sla-porra.html" class="sla-porra">sla porra</a>
+    </header>
+    <main>
+        Eu sou o Desenvolvimento de sistemas
+    </main>
 </body>
 </html>
